A bunch of refactoring and cleaning up